--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,18 +6,22 @@
 
     <meta charset="UTF-8"/>
 
-    <title>Current weather</title>
+    <title>Weather</title>
 
-    <script src="libs/jquery/jquery-3.2.0.js"></script>
-    <script src="libs/bootstrap-4.0.0/js/bootstrap.min.js"></script>
     <script src="libs/angular-1.6.3/angular.min.js"></script>
     <script src="libs/angular-1.6.3/angular-route.min.js"></script>
     <script src="libs/angular-1.6.3/angular-resource.min.js"></script>
     <script src="app/app.js"></script>
     <script src="app/js/controllers.js"></script>
     <script src="app/js/directives.js"></script>
-
-    <link href="libs/bootstrap-4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> 
+	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js" type="text/javascript"></script> 
+	<script src="libs/bootstrap-4.0.0/js/bootstrap.min.js"></script> 
+	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/base/jquery-ui.css" type="text/css" media="all" />
+	<link href="libs/bootstrap-4.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+	<link rel="stylesheet" href="app/css/style.css">
+	
 
 </head>
 
